// Prisma Schema für Smart Pantry
// Datenbank-Modell Definition

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  USER
  ADMIN
}

model User {
  id               Int            @id @default(autoincrement())
  email            String         @unique
  name             String         // Legacy: wird zu fullName migriert
  fullName         String?        // Vor- und Nachname
  username         String?        @unique // Eindeutiger Benutzername
  passwordHash     String
  role             UserRole       @default(USER)
  encryptedProfile String?
  quotaLlmTokens   Int            @default(5000)   // Free Tier: ~2-3 Foto-Analysen
  quotaRecipeCalls Int            @default(6)      // Free Tier: 6x "neue Rezepte" = 18 Rezepte (3 pro Call)
  llmTokensUsed    Int            @default(0)
  recipeCallsUsed  Int            @default(0)
  quotaResetAt     DateTime       @default(now())
  
  // Tier-spezifische Limits (Free Tier Defaults)
  maxCacheRecipeSuggestions Int?  @default(12)  // Free: 12, Basic: 30, Pro: -1 (unbegrenzt)
  maxChatMessages           Int?  @default(4)    // Free: 4, Basic: 16, Pro: 50
  maxCacheRecipeSearchViaChat Int? @default(4)  // Free: 4, Basic: 20, Pro: 100
  maxGroceriesWithExpiry    Int?  @default(10)   // Free: 10, Basic: 100, Pro: -1 (unbegrenzt)
  maxGroceriesTotal         Int?  @default(20)   // Free: 20, Basic: 250, Pro: -1 (unbegrenzt)
  notificationsEnabled      Boolean @default(false) // Free: false, Paid: true
  hasPrioritySupport        Boolean @default(false) // Nur Pro Tier
  
  // Tracking für monatliche Limits
  cacheRecipeSuggestionsUsed Int @default(0)  // Verwendete Cache-Vorschläge (monatlich)
  chatMessagesUsed          Int @default(0)   // Verwendete Chat-Nachrichten (monatlich)
  cacheRecipeSearchViaChatUsed Int @default(0) // Verwendete Rezeptsuche via Chat (monatlich)
  monthlyLimitResetAt      DateTime @default(now()) // Reset-Datum für monatliche Limits
  
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  refreshTokens    RefreshToken[]
  groceries        Grocery[]
  shoppingLists    ShoppingList[]
  savedRecipes     SavedRecipe[]
  cookedRecipes    CookedRecipe[]
}

model RefreshToken {
  id        Int       @id @default(autoincrement())
  tokenHash String
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    Int
  expiresAt DateTime
  createdAt DateTime  @default(now())
  revokedAt DateTime?
  userAgent String?
  ipAddress String?
}

model Grocery {
  id                Int       @id @default(autoincrement())
  user              User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId            Int
  name              String
  quantity          Float
  unit              String
  category          String
  expiryDate        DateTime?
  addedAt           DateTime  @default(now())
  lowStockThreshold Float     @default(1)
  notes             String?
}

model ShoppingList {
  id        Int                @id @default(autoincrement())
  user      User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    Int
  name      String?
  createdAt DateTime           @default(now())
  completed Boolean            @default(false)
  items     ShoppingListItem[]
}

model ShoppingListItem {
  id          Int          @id @default(autoincrement())
  list        ShoppingList @relation(fields: [listId], references: [id], onDelete: Cascade)
  listId      Int
  groceryName String
  quantity    Float        @default(1)
  checked     Boolean      @default(false)
}

model SavedRecipe {
  id                Int      @id @default(autoincrement())
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId            Int
  recipeId          Int
  title             String
  image             String?
  usedIngredients   Json?
  missedIngredients Json?
  likes             Int      @default(0)
  sourceUrl         String?
  savedAt           DateTime @default(now())
  isCustom          Boolean  @default(false)
  readyInMinutes    Int?
  servings          Int?
  instructions      String?
  ingredientsJson   Json?
}

model CookedRecipe {
  id          Int      @id @default(autoincrement())
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId      Int
  recipeId    Int
  recipeTitle String
  cookedAt    DateTime @default(now())
  rating      Int?
}
